Revision history for Perl extension Module::Starter

1.73
        * Fix case where a distro name of '0' would be replaced by the first
          module name, confusing the tests

1.72    Sat Mar 25 21:20:41 EDT 2017
        * Stable release containing previous fixes

1.71_01 Thu Mar 23 23:04:11 EDT 2017
        * GH#51: drop use of Module::Build::Compat in Build.PL (Karen
          Etheridge)
        * GH#56: Fix generated syntax errors when using --fatalize (Dan Book)
        * GH#57: Fix strange scoping issue in test on 5.8 (Dan Book)
        * GH#58: Typo and doc fixes (Tordek)
        * GH#59: Quote versions in generated Makefile.PL/Build.PL (Dan Book)
        * GH#61: Fix version comparison in test (Dan Book)
        * GH#63: Remove unneeded dependency Module::Install::AuthorTests (Dan
          Book)
        * GH#64: Replace usage of Path::Class with File::Spec (Dan Book)

1.71    Fri Jan 30 13:28:31 2015
        * GH #47: create_t breaks plugins. (David Pottage)

1.70	Tue Jan 20 20:56:31 2015
        * Change the url for issues from rt.cpan.org to GitHub (David Pottage)
        * Added a missing module to prerequisites (David Pottage)
        * Marked t/pod* test scripts as RELEASE_TESTING (David Pottage)
        * Moved boilerplate test to xt/ directory (David Pottage)
        * Added a --fatalize option to generate code where warnings are fatal
          This changes the default behaviour, as fatal warnings are now considered
          unwise for any public module that many others depend on.
          See: http://blogs.perl.org/users/peter_rabbitson/2014/01/fatal-warnings-are-a-ticking-time-bomb-via-chromatic.html

1.62    Sun Dec  8 11:49:21 2013
        * Fix regexp in tests to stop failing on 5.8.x (Sawyer X).
        * Fix FSF address in template block and tests (Brian Manning).
        * Typo fixes (David Steinbrunner).

1.61    Fri Dec  6 14:01:19 2013
        * Stop getpwuid calls on Windows, instead prompt user for author.