@@ -18,6 +18,7 @@ WriteMakefile(
         'ExtUtils::Command'            => '0',
         'File::Spec'                   => '0',
         'Getopt::Long'                 => '0',
+        'Module::Runtime'              => '0',
         'Pod::Usage'                   => '1.21',
         'parent'                       => '0',
         'version'                      => '0.77',
